--- a/frontend-angular/src/index.html
+++ b/frontend-angular/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <meta charset="utf-8">
   <title>FrontendAngular</title>
   <base href="/">
